--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ukr">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,59 +29,64 @@
       <button type="button">Замовити послугу</button>
     </section>
     <section>
+        <!--<h2>наші якості</h2>-->
         <ul>
             <li>
-                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li>
-                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
                 <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li>
-                <h2>ПЛАНУВАННЯ</h2>
+                <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li>
-                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
            
         </ul>
+
     </section>
 
     <section>
-        <h3>Чим ми займаємося</h3>
+        <h2>Чим ми займаємося</h2>
         <ul>
             <li>
-                <img src="./imges/Розробка коду.jpg" alt="Розробка коду" width="370">
-                <img src="./imges/Структуризація.jpg" alt="Структуризація" width="370">
-                <img src="./imges/Деталізація.jpg" alt="Деталізація" width="370">
-
+                <img src="./imges/Code-development.jpg" alt="Code-development" width="370">
+            </li>
+            <li>
+                <img src="./imges/Structuring.jpg" alt="Structuring" width="370">
+            </li>
+            <li>
+                <img src="./imges/Detailing.jpg" alt="Detailing" width="370">
             </li>
         </ul>
     </section>
     <section>
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./imges/Ігор Дем'яненко.jpg" alt="Ігор Дем'яненкo" width="270">
-                <h4>Ігор Дем'яненко</h4>
+                <img src="./imges/Ihor.jpg" alt="Ігор Дем'яненко" width="270">
+                <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./imges/Ольга Рєпіна.jpg" alt="Ольга Рєпіна" width="270">
-                <h4>Ольга Рєпіна</h4>
+                <img src="./imges/Olha.jpg" alt="Ольга Рєпіна" width="270">
+                <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./imges/Микола Тарасов.jpg" alt="Микола Тарасов" width="270">
-                <h4>Микола Тарасов</h4>
+                <img src="./imges/Mikola.jpg" alt="Микола Тарасов" width="270">
+                <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./imges/Михайло Єрмаков.jpg" alt="Михайло Єрмаков" width="270">
-                <h4>Михайло Єрмаков</h4>
+                <img src="./imges/Mihailo.jpg" alt="Михайло Єрмаков" width="270">
+                <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
