--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
             <li>
-                <img src="./imges/Code-development.jpg" alt="Code-development" width="370">
+                <img src="./imges/code-development.jpg" alt="Розробка коду" width="370">
             </li>
             <li>
-                <img src="./imges/Structuring.jpg" alt="Structuring" width="370">
+                <img src="./imges/structuring.jpg" alt="Структуризація" width="370">
             </li>
             <li>
-                <img src="./imges/Detailing.jpg" alt="Detailing" width="370">
+                <img src="./imges/detailing.jpg" alt="Деталізація" width="370">
             </li>
         </ul>
     </section>
@@ -70,22 +70,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./imges/Ihor.jpg" alt="Ігор Дем'яненко" width="270">
+                <img src="./imges/ihor.jpg" alt="Ігор Дем'яненко" width="270">
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./imges/Olha.jpg" alt="Ольга Рєпіна" width="270">
+                <img src="./imges/olha.jpg" alt="Ольга Рєпіна" width="270">
                 <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./imges/Mikola.jpg" alt="Микола Тарасов" width="270">
+                <img src="./imges/mikola.jpg" alt="Микола Тарасов" width="270">
                 <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./imges/Mihailo.jpg" alt="Михайло Єрмаков" width="270">
+                <img src="./imges/mihailo.jpg" alt="Михайло Єрмаков" width="270">
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
