--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
             <li>
-                <img src="./imges/code-development.jpg" alt="Розробка коду" width="370">
-                
+                <img src="./images/code-development.jpg" alt="Розробка коду" width="370">
             </li>
             <li>
-                <img src="./imges/structuring.jpg" alt="Структуризація" width="370">
+                <img src="./images/structuring.jpg" alt="Структуризація" width="370">
             </li>
             <li>
-                <img src="./imges/detailing.jpg" alt="Деталізація" width="370">
+                <img src="./images/detailing.jpg" alt="Деталізація" width="370">
             </li>
         </ul>
     </section>
@@ -73,22 +72,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./imges/ihor.jpg" alt="Ігор Дем'яненко" width="270">
+                <img src="./images/ihor.jpg" alt="Ігор Дем'яненко" width="270">
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./imges/olha.jpg" alt="Ольга Рєпіна" width="270">
+                <img src="./images/olha.jpg" alt="Ольга Рєпіна" width="270">
                 <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./imges/mikola.jpg" alt="Микола Тарасов" width="270">
+                <img src="./images/mikola.jpg" alt="Микола Тарасов" width="270">
                 <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./imges/mihailo.jpg" alt="Михайло Єрмаков" width="270">
+                <img src="./images/mihailo.jpg" alt="Михайло Єрмаков" width="270">
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
             </li>
